--- a/Mission5/Views/Home/Calculator.cshtml
+++ b/Mission5/Views/Home/Calculator.cshtml
@@ -3,7 +3,7 @@
 <h2>Join the "Save the Pangolin" Mailing List</h2>
 <form>
     <label>From:</label>
-    <input id="txtFrom" asp-for />
+    <input id="txtFrom" />
     <br />
 
     <label>Subject:</label>
