--- a/Mission5/Views/Shared/_Layout.cshtml
+++ b/Mission5/Views/Shared/_Layout.cshtml
@@ -1,24 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>@ViewData["Title"]</title>
-
-    <!-- Link to CSS -->
-    <link rel="stylesheet" href="css/site.css"/>
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - My Hobby Site</title>
+    
+    <!-- CSS -->
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="~/css/site.css"/>
 </head>
 <body>
-<h1>The Pangolin Appreciation Club</h1>
-<h3>The only mammal with scales!</h3>
-<img src="~/img/Pangolin.jpeg" height="200" id="imgPangolin"/>
+<!-- Header -->
+<header class="site-header">
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <div>
+                <a class="nav-link d-inline-block" href="/">My Hobby</a>
+                <a class="nav-link d-inline-block" href="/Home/Calculator">Calculator</a>
+            </div>
+        </div>
+    </nav>
+</header>
 
-<div>
-    @RenderBody()
-</div>
+<!-- Main Content -->
+<main class="main-content">
+    <div class="container">
+        @RenderBody()
+    </div>
+</main>
 
-<script src="lib/jquery/jquery-4.0.0.min.js"></script>
-<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="js/site.js"></script>
+<!-- Footer -->
+<footer class="site-footer">
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-left">
+                <p class="mb-0">Built by Michelle Johanson</p>
+            </div>
+            <div class="footer-right">
+                <p class="mb-0">IS 413 - Mission 5</p>
+                <p class="mb-0">Brigham Young University</p>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<!-- Scripts -->
+<script src="~/lib/jquery/jquery-4.0.0.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js"></script>
+@* @await RenderSectionAsync("Scripts", required: false) *@
 </body>
 </html>
