--- a/Mission5/Views/Shared/_Layout.cshtml
+++ b/Mission5/Views/Shared/_Layout.cshtml
@@ -50,6 +50,8 @@
 
 <!-- Scripts -->
 <script src="~/lib/jquery/jquery-4.0.0.min.js"></script>
+<script src="~/lib/jquery/jquery-migrate-v3.6.0.js"></script>
+
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js"></script>
 </body>
